[gd_scene load_steps=12 format=3 uid="uid://ck5omq7jnveur"]

[ext_resource type="Script" uid="uid://c5iav5dpbsddx" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://fvt66y6wll0h" path="res://assets/grass.png" id="2_85g3d"]
[ext_resource type="PackedScene" uid="uid://iw2vjq3rtafq" path="res://scenes/player.tscn" id="2_tipki"]
[ext_resource type="PackedScene" uid="uid://c56adxikamofx" path="res://scenes/coin.tscn" id="3_85g3d"]
[ext_resource type="PackedScene" uid="uid://c653hqup3i06c" path="res://scenes/powerup.tscn" id="4_choun"]
[ext_resource type="PackedScene" uid="uid://mx1mh0i73bpu" path="res://scenes/cactus.tscn" id="4_ya4ey"]
[ext_resource type="PackedScene" uid="uid://by0s6fxgkexi8" path="res://scenes/hud.tscn" id="5_ya4ey"]
[ext_resource type="AudioStream" uid="uid://cdc534pmr7h6u" path="res://assets/audio/Coin.wav" id="6_eb6dy"]
[ext_resource type="AudioStream" uid="uid://c1am3qudh2k3" path="res://assets/audio/EndSound.wav" id="7_trceg"]
[ext_resource type="AudioStream" uid="uid://btu8j8uyw1uar" path="res://assets/audio/Level.wav" id="8_a8y0u"]
[ext_resource type="AudioStream" uid="uid://dclnicoon4oyh" path="res://assets/audio/Powerup.wav" id="8_choun"]

[node name="Main" type="Node"]
script = ExtResource("1_o5qli")
coin_scene = ExtResource("3_85g3d")
powerup_scene = ExtResource("4_choun")
cactus_scene = ExtResource("4_ya4ey")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_85g3d")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_tipki")]
position = Vector2(232, 269)

[node name="HUD" parent="." instance=ExtResource("5_ya4ey")]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_eb6dy")

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_choun")

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_trceg")

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_a8y0u")

[node name="GameTimer" type="Timer" parent="."]

[node name="DeathAnimationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
